--- a/sinfo/criptografia/templates/index.html
+++ b/sinfo/criptografia/templates/index.html
@@ -2,51 +2,83 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seguridad Informática</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seguridad Informática</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="#">Directrices de SINFO</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Criptografía <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Esteganografía</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Certificados y Firmas Digitales</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hacking ético</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">IDS y IPS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Seguridad en Linux</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Seguridad en Wi-Fi</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
+  <main class="container mt-4">
+    <section id="introduction">
+      <h1 class="mb-4">Aquí va un título</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu risus congue, aliquet tortor sed,
+        convallis nibh. Nulla facilisi. Praesent massa sapien, aliquet ac magna ut, blandit eleifend purus. Etiam semper
+        ac dui suscipit pretium. Sed tincidunt mauris ex, at dignissim lectus posuere vel. Praesent vel ex sed orci
+        eleifend interdum. Donec sit amet odio commodo risus egestas porttitor at sed nibh. Suspendisse potenti.
+        Maecenas at urna ut tortor luctus finibus. Fusce venenatis efficitur nisl, cursus euismod sapien hendrerit at.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin laoreet ligula in
+        massa egestas, ut sodales turpis molestie..</p>
+    </section>
 
+    <section id="encryption" class="mt-5">
+      <h2 class="mb-4">Aquí un subtítulo</h2>
+      <p>Donec urna turpis, vestibulum sed massa sit amet, auctor vehicula dui. Etiam enim turpis, pretium ac porttitor sit amet, fringilla id odio. Praesent in ligula eget nisl scelerisque venenatis a nec lorem. Suspendisse venenatis diam quis porttitor pharetra. Vivamus lacus augue, gravida nec auctor ut, efficitur at tellus. Sed at egestas dui. Duis vel metus vitae ante egestas euismod vel at quam. Etiam vitae imperdiet odio. Morbi et egestas lectus, id accumsan diam. Etiam finibus mollis lorem, at lobortis lectus porta vel. Etiam nec vehicula velit.
 
+      </p>
+    </section>
 
-    
+    <section id="django-crypto" class="mt-5">
+      <h2 class="mb-4">Y otro</h2>
+      <p>Donec congue nunc bibendum diam fringilla, et imperdiet mi luctus. Ut vel sem nec ligula tincidunt fermentum ac cursus turpis. Vivamus ultrices dapibus lorem, id feugiat ex ultricies nec. Cras at est sit amet arcu volutpat pellentesque a non mauris. Pellentesque quis quam interdum, luctus ex ut, vehicula magna. Proin in finibus dui. Vestibulum metus lectus, luctus eu ex sed, tristique tincidunt mauris. Integer at lobortis metus. Suspendisse sit amet convallis purus. Mauris sagittis nec velit vitae pellentesque. Morbi mollis ex odio, a malesuada dolor accumsan quis. Sed augue enim, aliquet in molestie at, pharetra lobortis lorem. Nunc consequat non risus non tempor. Nunc sollicitudin porttitor turpis, ac consectetur risus fermentum eget. Donec id nisl sagittis, viverra nulla nec, elementum felis.</p>
+      <ul>
+        <li>Un punto</li>
+        <li>:</li>
+        <li>y tripas 😀</li>
+      </ul>
+    </section>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
